src/main/kotlin/com/example/ddd/common/errors/ErrorCollectionDto.kt
package com.example.ddd.common.errors

data class ErrorCollectionDto(val errors: List<ErrorDto>)
